<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/endColor">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_app"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actionBar"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="LOCATION" />
        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/location"
            android:gravity="center"
            android:text="@string/updated_at"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:id="@+id/temperatureDetailsRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/time"
            android:layout_marginTop="30dp"
            android:padding="20dp">

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/cd" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="100sp"
                android:textStyle="bold"
                tools:text="24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_celsious"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weatherDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="Weather Description" />

                <TextView
                    android:id="@+id/feelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/feels_like"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/extraDetailsRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperatureDetailsRl"
            android:layout_marginTop="82dp"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView3"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/startColor"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/cd"
                            android:src="@drawable/clouds" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/cloud_cover"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(%)"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cloudCover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        tools:text="High" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/startColor"
                app:cardCornerRadius="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/cd"
                            android:src="@drawable/wind_speed_img" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/wind_speed"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(km/h)"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        tools:text="High" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30dp"
                app:cardBackgroundColor="@color/startColor"
                app:cardCornerRadius="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/cd"
                            android:src="@drawable/precipitation" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/precipitation"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(mm)"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/precipitation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        tools:text="80" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView2"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@color/startColor"
                app:cardCornerRadius="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/cd"
                            android:src="@drawable/pressure" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/pressure"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(MB)"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        tools:text="High" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>